--- a/package.json
+++ b/package.json
@@ -24,13 +24,18 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/react": "1.1.2",
+    "@emotion/react": "11.1.4",
+    "@emotion/styled": "11.0.0",
+    "@hookform/resolvers": "2.7.1",
     "@prisma/client": "2.28.0",
     "blitz": "0.38.6",
-    "react-dom": "alpha",
+    "framer-motion": "3.2.0",
     "react": "alpha",
-    "zod": "3.7.1",
+    "react-dom": "alpha",
     "react-hook-form": "7.12.2",
-    "@hookform/resolvers": "2.7.1"
+    "yup": "0.32.9",
+    "zod": "3.7.1"
   },
   "devDependencies": {
     "@types/preview-email": "2.0.1",
@@ -38,8 +43,8 @@
     "eslint": "7.32.0",
     "husky": "6.0.0",
     "lint-staged": "10.5.4",
-    "prettier-plugin-prisma": "0.15.0",
     "prettier": "2.3.2",
+    "prettier-plugin-prisma": "0.15.0",
     "pretty-quick": "3.1.1",
     "preview-email": "3.0.4",
     "prisma": "2.28.0",
